# hate-speech-detection

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: testing.yml
agents/: action_agent.py  audio_agent.py  error_handler.py  hate_speech_agent.py  image_agent.py  reasoning_agent.py  reddit_scraping_agent.py  retriever_agent.py  validation_agent.py
api/: audio_endpoints.py  image_endpoint.py  reddit_endpoint.py  text_endpoints.py
controllers/: audio_controller.py  image_controller.py  text_controller.py
core/: config.py
data/policy_docs/: google_policy.txt  indian_penal_code.txt  meta_policy.txt  reddit_policy.txt  us_laws.txt
docker/: Dockerfile  entrypoint.sh
embeddings_storage/: documents.pkl  embeddings.npy  metadata.json
logs/policy_embeddings/: metadata.json
schemas/: audio_schema.py  image_schema.py  reddit_schema.py  text_schema.py
services/: api_listner.py
tests/: test_action_agent.py  test_hate_speech_agent.py  test_reasoning_agent.py  test_retriever_agent.py
utils/: custom_logger.py  embeddings.py  qdrant_handler.py
