[project]
name = "hate-speech-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "openai>=1.82.0",
    "pandas>=2.0.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
]
