[project]
name = "hate-speech-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "langchain[openai]>=0.3.25",
    "numpy>=1.24.0",
    "ollama>=0.5.1",
    "openai>=1.82.0",
    "pandas>=2.0.0",
    "pyaudio>=0.2.14",
    "pytest>=8.4.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.14.2",
    "streamlit>=1.28.0",
]
