[project]
name = "hate-speech-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "langchain[openai]>=0.3.25",
    "matplotlib>=3.10.3",
    "numpy>=1.24.0",
    "ollama>=0.5.1",
    "openai>=1.82.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.0",
    "praw>=7.8.1",
    "pyaudio>=0.2.14",
    "pytesseract>=0.3.13",
    "pytest>=8.4.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.2",
    "speechrecognition>=3.14.3",
    "streamlit>=1.28.0",
    "uvicorn>=0.34.3",
]
